# cpp-debug-log

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
debug_log/: debug_log.hpp
examples/: main.cpp
include/debug_log/: debug_log.hpp
